--- a/Aplicaciones/Lotes/templates/listaLotes.html
+++ b/Aplicaciones/Lotes/templates/listaLotes.html
@@ -33,15 +33,27 @@
                 <td>{{ lote.proveedor.nombre }}</td>
                 <td>{{ lote.fecha_vencimiento }}</td>
                 <td>{{ lote.cantidad }}</td>
-                <td class="text-center">
-                  {% if lote.pdf_factura %}
-                    <a href="{{ lote.pdf_factura.url }}" target="_blank" class="btn btn-outline-primary btn-sm" title="Ver Factura">
-                      <i class="bi bi-file-earmark-pdf"></i> Ver
-                    </a>
-                  {% else %}
-                    Ninguna
-                  {% endif %}
+                <td>
+                    {% if lote.pdf_factura %}
+                        <!-- Ver el PDF directamente en la tabla -->
+                        <iframe 
+                        src="{{ lote.pdf_factura.url }}" 
+                        width="300" 
+                        height="250"
+                        style="border: 1px solid #ddd; background: #f8f9fa;"
+                        title="Vista previa del documento"
+                        type="application/pdf">
+                        </iframe>
+                        <br><br>
+                        <p>{{ lote.pdf_factura.name|slice:"6:" }}</p>
+                        <br>
+                        <a href="{{ lote.pdf_factura.url }}" download class="btn btn-sm btn-primary">Descargar</a>
+                        <a href="{{ lote.pdf_factura.url }}" target="_blank" class="btn btn-sm btn-secondary">Ver en pestaña</a>
+                    {% else %}
+                        Ninguna
+                    {% endif %}
                 </td>
+
                 <td class="text-center">
                   <a href="/editarLote/{{ lote.id }}" class="btn btn-outline-warning btn-sm" title="Editar">
                     <i class="bi bi-pencil"></i>
