--- a/Aplicaciones/Lotes/templates/listaLotes.html
+++ b/Aplicaciones/Lotes/templates/listaLotes.html
@@ -66,20 +66,6 @@
             {% endfor %}
           </tbody>
         </table>
-
-        <script>
-          $(document).ready(function() {
-              $('#tbl_lotes').DataTable({
-                  language: {
-                      url: 'https://cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json'
-                  },
-                  dom: 'Bfrtip',
-                  buttons: [
-                      'copy', 'csv', 'excel', 'pdf', 'print'
-                  ]
-              });
-          });
-        </script>
       </div>
     </div>
   </div>
@@ -102,5 +88,22 @@
       }
     });
   }
+</script>
+<script>
+    $(document).ready(function() {
+        let table = new DataTable('#tbl_lotes', {
+            language: {
+                url: 'https://cdn.datatables.net/plug-ins/2.3.1/i18n/es-ES.json'
+            },
+            dom: 'Bfrtip', 
+            buttons: [
+                'copy',
+                'csv',
+                'excel',
+                'pdf',
+                'print'
+            ]
+        });
+    });
 </script>
 {% endblock %}
