--- a/Aplicaciones/Proveedor/templates/editarProveedor.html
+++ b/Aplicaciones/Proveedor/templates/editarProveedor.html
@@ -39,7 +39,7 @@
                         <button type="submit" class="btn btn-primary btn-lg px-4 me-2 rounded-pill shadow">
                             <i class="fa fa-save me-1"></i> Actualizar
                         </button>
-                        <a href="/listaProveedores/" class="btn btn-outline-danger btn-lg px-4 rounded-pill shadow">
+                        <a href="/listaProveedor/" class="btn btn-outline-danger btn-lg px-4 rounded-pill shadow">
                             <i class="fa fa-times me-1"></i> Cancelar
                         </a>
                     </div>
