--- a/Aplicaciones/Proveedor/templates/nuevoProveedor.html
+++ b/Aplicaciones/Proveedor/templates/nuevoProveedor.html
@@ -35,7 +35,7 @@
                         <button class="btn btn-primary btn-lg px-4 me-2 rounded-pill shadow" type="submit">
                             <i class="fa fa-save me-1"></i> Guardar
                         </button>
-                        <a href="/listaProveedores/" class="btn btn-outline-danger btn-lg px-4 rounded-pill shadow">
+                        <a href="/listaProveedor/" class="btn btn-outline-danger btn-lg px-4 rounded-pill shadow">
                             <i class="fa fa-times me-1"></i> Cancelar
                         </a>
                     </div>
