modificaciones en la plantlla

--- a/Aplicaciones/templates/plantilla.html
+++ b/Aplicaciones/templates/plantilla.html
@@ -136,38 +136,18 @@
                 <div class="collapse" id="base">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="/listadoAutores/">
-                        <span class="sub-item">Lista de Autores</span>
+                      <a href="/listaAlimentos/">
+                        <span class="sub-item">Lista de Alimentos</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/listaEvento/">
-                        <span class="sub-item">Lista de Eventos</span>
+                      <a href="/listaProveedor/">
+                        <span class="sub-item">Lista de Proveedores</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/listaLector/">
-                        <span class="sub-item">Lista de Lectores</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="/listaLibro/">
-                        <span class="sub-item">Lista de Libros</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="/listaLibroAutografiado/">
-                        <span class="sub-item">Lista de Libros Autografiados</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="/listaCapital/">
-                        <span class="sub-item">Lista de Capitales</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="/listaPais/">
-                        <span class="sub-item">Lista de Paises</span>
+                      <a href="/listaLotes/">
+                        <span class="sub-item">Lista de Lotes</span>
                       </a>
                     </li>
                   </ul>
