--- a/Aplicaciones/templates/plantilla.html
+++ b/Aplicaciones/templates/plantilla.html
@@ -4,7 +4,7 @@
 <html lang="es">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Evento de autografo de libros</title>
+    <title>Inventario de Alimentos</title>
     <meta
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
