--- a/Aplicaciones/Alimentos/templates/listaAlimentos.html
+++ b/Aplicaciones/Alimentos/templates/listaAlimentos.html
@@ -77,20 +77,14 @@
 </script>
 
 <script>
-    $(document).ready(function() {
-        let table = new DataTable('#tbl_alimentos', {
-            language: {
-                url: 'https://cdn.datatables.net/plug-ins/2.3.1/i18n/es-ES.json'
-            },
-            dom: 'Bfrtip', 
-            buttons: [
-                'copy',
-                'csv',
-                'excel',
-                'pdf',
-                'print'
-            ]
-        });
-    });
+  $('#tbl_alimentos').DataTable({
+      dom: 'Bfrtip', // Esto activa los botones arriba de la tabla
+      buttons: ['copy', 'csv', 'excel', 'pdf', 'print'],
+
+      language: {
+          url: 'https://cdn.datatables.net/plug-ins/1.13.4/i18n/es-ES.json'
+      }
+  });
+
 </script>
 {% endblock %}
