--- a/Aplicaciones/Proveedor/templates/listaProveedor.html
+++ b/Aplicaciones/Proveedor/templates/listaProveedor.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="table-responsive">
-        <table id="tbl_proveedores" class="table table-bordered table-striped table-hover align-middle">
+        <table class="table table-bordered table-striped table-hover" id="tbl_proveedores" >
           <thead class="table-primary text-center">
             <tr>
               <th>ID</th>
@@ -88,20 +88,14 @@
 </script>
 
 <script>
-    $(document).ready(function() {
-        let table = new DataTable('#tbl_proveedores', {
-            language: {
-                url: 'https://cdn.datatables.net/plug-ins/2.3.1/i18n/es-ES.json'
-            },
-            dom: 'Bfrtip', 
-            buttons: [
-                'copy',
-                'csv',
-                'excel',
-                'pdf',
-                'print'
-            ]
-        });
-    });
+  $('#tbl_proveedores').DataTable({
+      dom: 'Bfrtip', // Esto activa los botones arriba de la tabla
+      buttons: ['copy', 'csv', 'excel', 'pdf', 'print'],
+
+      language: {
+          url: 'https://cdn.datatables.net/plug-ins/1.13.4/i18n/es-ES.json'
+      }
+  });
+
 </script>
 {% endblock %}
